WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247140
Fix how we set fontWeight so that it remains in bounds
https://bugs.webkit.org/show_bug.cgi?id=247140
Summary
Fix how we set fontWeight so that it remains in bounds
Chirag M Shah
Reported
2022-10-27 11:09:56 PDT
Currently, fontWeights can 0, which results in a crash due to it not being a valid key for segmentedFontFaceCache (when wrapped inside a FontSelectionRequest). We need to fix that.
Attachments
Add attachment
proposed patch, testcase, etc.
Chirag M Shah
Comment 1
2022-10-27 11:13:58 PDT
https://github.com/WebKit/WebKit/pull/5836
EWS
Comment 2
2022-10-28 17:27:25 PDT
Committed
256123@main
(3070b3d704a3): <
https://commits.webkit.org/256123@main
> Reviewed commits have been landed. Closing PR #5836 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-10-28 17:28:21 PDT
<
rdar://problem/101699349
>
Chirag M Shah
Comment 4
2022-11-04 13:46:08 PDT
Corrected radar:
rdar://101705191
Chirag M Shah
Comment 5
2022-11-04 13:47:39 PDT
<
rdar://problem/101699349
>
Chirag M Shah
Comment 6
2022-11-04 13:48:52 PDT
rdar://100986499
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug