Add PropertyWrapperFontWeight to bound the values for weight https://bugs.webkit.org/show_bug.cgi?id=247140 rdar://problem/100986499

Reviewed by Myles C. Maxfield.

Currently, fontWeight wasn't bounded based on the CSS specs, which led
to scenarios where FontSelectionRequest had a 0 fontWeight, and which
resulted in an empty FontSelectionRequest, which is an invalid key
based for the HashMap segmentedFontFaceCache. This resulted in map
corruption, which led to a crash. The change fixes the issue by
correctly defining PropertyWrapperFontWeight, which doesn't allow the
blend() to set invalid weight values.

Test: fonts/font-weight-invalid-crash.html

* LayoutTests/fonts/font-weight-invalid-crash-expected.txt: Added.
* LayoutTests/fonts/font-weight-invalid-crash.html: Added.
* Source/WebCore/animation/CSSPropertyAnimation.cpp:
(WebCore::blendFunc):
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):
* LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/animations/system-fonts-expected.txt:
* LayoutTests/platform/gtk/imported/w3c/web-platform-tests/css/css-fonts/animations/system-fonts-expected.txt:
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/css/css-fonts/animations/system-fonts-expected.txt:
* LayoutTests/platform/wpe/imported/w3c/web-platform-tests/css/css-fonts/animations/system-fonts-expected.txt:

Canonical link: https://commits.webkit.org/256123@main